# QSolver

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  groups.hpp
include/: qsolver.hpp
include/testing/: testlib.hpp
include/util/: from_string.hpp  precision_compare.hpp
src/cli/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
